# beckn-ai-agent-marketplace

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
bpp-api/: .dockerignore  Dockerfile  package-lock.json  package.json
bpp-api/migrations/: 001_schema.sql  002_seed.sql
bpp-api/src/: beckn.js  db.js  index.js  migrate.js
docs/: dev-to-production.md
generic-devkit/: README.md
generic-devkit/config/: generic-bap.yaml  generic-bpp.yaml
generic-devkit/install/: docker-compose-generic-local.yml  docker-compose-generic.yml  docker-compose-marketplace.yml
generic-devkit/postman/: BAPBecknStarterKit.postman_collection.json  BPPBecknStarterKit.postman_collection.json  MarketplaceBAP.postman_collection.json  MarketplaceBPP.postman_collection.json
infra/: .env.example  docker-compose.yml
infra/db/: init.sh
infra/onix/: bap.yaml  bpp.yaml  generic-routing-BAPCaller.yaml  generic-routing-BAPReceiver.yaml  generic-routing-BPPCaller.yaml  generic-routing-BPPReceiver.yaml
infra/postman/: GroqTextGenerator_Flow.postman_collection.json  MarketplaceBAP.postman_collection.json  MarketplaceBPP.postman_collection.json
libs/beckn_models/: __init__.py  ai_agents.py  catalog.py  context.py  contract.py  pyproject.toml
libs/beckn_models/beckn_models/: db.py
schemas/: agentfacts-v1.json  ai-agents-v1.json  execution-result-v1.json
scripts/: smoke_test.py
services/agents/: Dockerfile  README.md  requirements.txt
services/bap/: Dockerfile  requirements.txt
services/bpp/: Dockerfile
services/frontend/: Dockerfile  next.config.ts  (+2 more)
tests/: TESTING.md
(+70 files in other folders)
